# zed

./: .gitignore  CMakeLists.txt  README.md
common/: CMakeLists.txt
common/inc/: n.hpp
common/tests/: test_n.cpp
core/: CMakeLists.txt
core/inc/: core.hpp
core/src/: core.cpp
core/tests/: test_core.cpp
utility/: CMakeLists.txt
utility/inc/: b.hpp
utility/tests/: test_b.cpp
